syntax = "proto3";

option go_package = "mymessage/protos";

package messageprotos;

service MyMessageService {
	rpc ListMessages(ListMyMessagesRequest) returns (ListMyMessagesResponse);
	rpc AddMessage(AddMyMessageRequest) returns (AddMyMessageResponse);
	rpc UpdateMessage(UpdateMyMessageRequest) returns (UpdateMyMessageResponse);
}	

message MyMessage {
	string userId = 1;
	int64  myMessageId = 2;
	string myMessage = 3;
}

message ListMyMessagesRequest {
	string userId = 1;
}

message ListMyMessagesResponse {
	repeated MyMessage myMessages = 1;
}

message AddMyMessageRequest {
	MyMessage myMessage = 1;
}

message AddMyMessageResponse {
	MyMessage myMessage = 1;
}

message UpdateMyMessageRequest {
	MyMessage myMessage = 1;
}

message UpdateMyMessageResponse {
	MyMessage myMessage = 1;
}

